@@ -79,7 +79,7 @@ bool CLuaHandle::devMode = false;
  * For now, to use these addons in a widget, prepend widget: and, for a gadget, prepend gadget:. For example,
  *
  *    function widget:UnitCreated(unitID, unitDefID, unitTeam, builderID)
- *        ...  
+ *        ...
  *    end
  *
  * Some functions may differ between (synced) gadget and widgets; those are in the [Synced - Unsynced Shared](#Synced___Unsynced_Shared) section. Essentially the reason is that all information should be available to synced (game logic controlling) gadgets, but restricted to unsynced gadget/widget (e.g. information about an enemy unit only detected via radar and not yet in LOS). In such cases the full (synced) param list is documented.
@@ -1148,7 +1148,7 @@ void CLuaHandle::UnitTaken(const CUnit* unit, int oldTeam, int newTeam)
  * @number unitID
  * @number unitDefID
  * @number newTeam
- * @number oldTeam 
+ * @number oldTeam
  */
 void CLuaHandle::UnitGiven(const CUnit* unit, int oldTeam, int newTeam)
 {
@@ -2525,11 +2525,6 @@ DRAW_CALLIN(DrawWorldPreUnit)
 DRAW_CALLIN(DrawPreDecals)
 
 /***
- * @function DrawWorldPreParticles
- */
-DRAW_CALLIN(DrawWorldPreParticles)
-
-/***
  * @function DrawWaterPost
  */
 DRAW_CALLIN(DrawWaterPost)
@@ -2609,6 +2604,35 @@ DRAW_CALLIN(DrawShadowUnitsLua)
  *
  */
 DRAW_CALLIN(DrawShadowFeaturesLua)
+
+/***
+ * DrawWorldPreParticles is called multiples times per draw frame, during various phases of drawing water.
+ * Each phase has a different permutation of values for drawAboveWater, drawReflection, and drawRefraction.
+ *
+ * @function DrawWorldPreParticles
+ * @bool drawAboveWater
+ * @bool drawReflection
+ * @bool drawRefraction
+ */
+void CLuaHandle::DrawWorldPreParticles(bool drawAboveWater, bool drawReflection, bool drawRefraction)
+{
+	RECOIL_DETAILED_TRACY_ZONE;
+	LUA_CALL_IN_CHECK(L);
+	luaL_checkstack(L, 6, __func__);
+	static const LuaHashString cmdStr(__func__);
+	if (!cmdStr.GetGlobalFunc(L))
+		return;
+
+	lua_pushboolean(L, drawAboveWater);
+	lua_pushboolean(L, drawReflection);
+	lua_pushboolean(L, drawRefraction);
+
+	LuaOpenGL::SetDrawingEnabled(L, true);
+
+	RunCallIn(L, cmdStr, 3, 0);
+
+	LuaOpenGL::SetDrawingEnabled(L, false);
+}
 
 inline void CLuaHandle::DrawScreenCommon(const LuaHashString& cmdStr)
 {
@@ -3454,7 +3478,7 @@ bool CLuaHandle::MapDrawCmd(int playerID, int type,
 
 
 /***
- * 
+ *
  * @function GameSetup
  * @string state
  * @bool ready
